2002-12-05  Sam Steingold  <sds@gnu.org>

	* clx.f (get_event_mask): fixed error handling

2002-12-04  Bruno Haible  <bruno@clisp.org>

	* foreign.d (convert_function_to_foreign, init_ffi): Add casts to make
	it compile in C++ mode.

2002-12-04  Sam Steingold  <sds@gnu.org>

	* loop.lisp (expand-loop): removed the `initializations2'
	optimization which bound some iteration variables right around
	the main-code: this allows accessing iteration variables in the
	finally clauses (this also shortens the bytecode)

2002-12-04  Sam Steingold  <sds@gnu.org>

	* defmacro.lisp (make-length-test): use EXT:LIST-LENGTH-DOTTED
	instead if LENGTH because the argument may be dotted when it comes
	from a destructuring lambda list

2002-12-03  Sam Steingold  <sds@gnu.org>

	* stream.d (MAKE-WINDOW): do not assume that *TERMINAL-IO* is a
	terminal-stream
	(FILE-POSITION): decrement the position if a character has been
	unread (so that PEEK-CHAR does not modify FILE-POSITION)

2002-12-02  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out): handle characters

2002-12-02  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (finalize-coutput-file): produce ANSI C,
	compilable with a C++ compiler such as g++

2002-12-02  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 647015 ]: ffi:def-c-enum broken from .fas file
	* foreign1.lisp (def-c-enum): use DEF-C-TYPE to define the enum
	type to C `int'

2002-12-02  Sam Steingold  <sds@gnu.org>

	* int2adic.d (D_D_mal2adic_D, UDS_UDS_durch2adic_UDS):
	avoid "warning: statement with no effect"
	* hashtabl.d (hashcode, CLASS-TUPLE-GETHASH): ditto

2002-12-01  Bruno Haible  <bruno@clisp.org>

	* spvw_debug.d (nobject_out): Fix compilation error when !DYNAMIC_FFI.

2002-12-01  Bruno Haible  <bruno@clisp.org>

	Make it buildable with CC=g++.

	* m4/proto.m4 (CL_PROTO_RET): Add an argument, the ANSI-DECL.
	* m4/abort.m4 (CL_ABORT): Update.
	* m4/closedir.m4 (CL_CLOSEDIR): Update.
	* m4/free.m4 (CL_FREE): Make it work better with CC=g++.